[gd_scene load_steps=6 format=2]

[ext_resource path="res://Stick.gd" type="Script" id=1]
[ext_resource path="res://Assets/CustomGraphics/BambooFull.png" type="Texture" id=2]
[ext_resource path="res://Assets/CustomGraphics/BambooChomped.png" type="Texture" id=3]
[ext_resource path="res://Assets/CustomGraphics/BambooSuperChomped.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 95.7449, 11.4016 )

[node name="Stick" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="BambooFull" type="Sprite" parent="."]
scale = Vector2( 1, 3 )
texture = ExtResource( 2 )
flip_h = true

[node name="StickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StickArea"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="BambooChomped" type="Sprite" parent="."]
visible = false
scale = Vector2( 1, 3 )
texture = ExtResource( 3 )

[node name="BambooSuperChomped" type="Sprite" parent="."]
visible = false
scale = Vector2( 1, 3 )
texture = ExtResource( 4 )

